--- a/numpy/01_numpy.ipynb
+++ b/numpy/01_numpy.ipynb
@@ -9,7 +9,11 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#### What is numpy?\n",
+    "numpy, which stands for Numerical Python, is a library consisting of multidimensional array objects.\n",
+    "We can install numpy by `pip install numpy`"
+   ]
   }
  ],
  "metadata": {
