Added some more content

--- a/numpy/01_numpy.ipynb
+++ b/numpy/01_numpy.ipynb
@@ -10,6 +10,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### How to create arrays in Python?\n",
+    "Look at the below code. Here we are converting python list object into numpy array object whose name is `np`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -18,7 +26,21 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "my_list = [10, 20, 30] # From list: 1d array\n",
+    "ndarry = np.array(my_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### How to represent 1-d, 2-d & 3d arrays in python\n",
+    "Observe that 2-d array is nothing but matrix.\n",
+    "![image](https://github.com/user-attachments/assets/265af33e-51d1-4131-b673-26814f50a6d3)"
+   ]
   }
  ],
  "metadata": {
