Added some more content

--- a/numpy/01_numpy.ipynb
+++ b/numpy/01_numpy.ipynb
@@ -41,6 +41,238 @@
     "Observe that 2-d array is nothing but matrix.\n",
     "![image](https://github.com/user-attachments/assets/265af33e-51d1-4131-b673-26814f50a6d3)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Important functions of array object"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### shape\n",
+    "This is a tuple of integers indicating the size of the array in each dimension. For a matrix with n rows and m columns, shape will be (n,m)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "my_list = [10, 20, 30]\n",
+    "array = np.array(my_list)\n",
+    "array.shape # (3,)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "my_list = [10, 20, 30]\n",
+    "array = np.array(my_list)\n",
+    "array.dtype # dtype('int32')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### reshape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Will see later."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### arange"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.arange(0, 10, 3) # array([0, 3, 6, 9])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### zeros "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.zeros((2, 3)) # array([[0., 0., 0.],\n",
+    "                 #        [0., 0., 0.]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.ones((2, 5)) # array([[1., 1., 1., 1., 1.],\n",
+    "                #        [1., 1., 1., 1., 1.]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### linspace\n",
+    "Let's understand through an example. \n",
+    "question is to divide the range 1 to 10 into 7 intervals."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.linspace(0, 10, 7) # array([ 0.        ,  1.66666667,  3.33333333,  5.        ,  6.66666667,\n",
+    "                      #         8.33333333, 10.        ])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### rand"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.random.rand(3, 4) # array([[0.24327936, 0.0783221 , 0.7687696 , 0.47928363],\n",
+    "                     #        [0.7119545 , 0.60920914, 0.57668337, 0.62228376],\n",
+    "                     #        [0.38209233, 0.15640246, 0.57730781, 0.25935787]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### randint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.random.randint(4, 40, 10) # array([21, 33, 30, 34, 22,  7,  7, 12, 33, 18])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### randn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.random.randn(2, 3) # array([[ 0.06832391,  0.57957572,  0.82122809],\n",
+    "                               [-1.5736223 ,  0.23863195, -0.05318879]])"
+   ]
   }
  ],
  "metadata": {
