--- a/numpy/01_numpy.ipynb
+++ b/numpy/01_numpy.ipynb
@@ -196,8 +196,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
