Added some more content

--- a/numpy/01_numpy.ipynb
+++ b/numpy/01_numpy.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "#### What is numpy?\n",
-    "numpy, which stands for Numerical Python, is a library consisting of multidimensional array objects.</br>\n",
+    "numpy, which stands for Numerical Python, is a library consisting of multidimensional array objects.<br>\n",
     "We can install numpy by `pip install numpy`"
    ]
   },
