Added some more content

--- a/numpy/01_numpy.ipynb
+++ b/numpy/01_numpy.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "my_list = [10, 20, 30] # From list: 1d array\n",
+    "my_list = [10, 20, 30]\n",
     "ndarry = np.array(my_list)"
    ]
   },
