--- a/numpy/01_numpy.ipynb
+++ b/numpy/01_numpy.ipynb
@@ -191,7 +191,7 @@
    "metadata": {},
    "source": [
     "#### linspace\n",
-    "Let's understand through an example.</br> \n",
+    "Let's understand through an example.<br> \n",
     "question is to divide the range 1 to 10 into 7 intervals."
    ]
   },
