--- a/numpy/01_numpy.ipynb
+++ b/numpy/01_numpy.ipynb
@@ -192,7 +192,7 @@
    "source": [
     "#### linspace\n",
     "Let's understand through an example.<br> \n",
-    "question is to divide the range 1 to 10 into 7 intervals."
+    "Question is to divide the range 1 to 10 into 7 intervals."
    ]
   },
   {
