Added some more content

--- a/numpy/01_numpy.ipynb
+++ b/numpy/01_numpy.ipynb
@@ -30,7 +30,7 @@
     "import numpy as np\n",
     "\n",
     "my_list = [10, 20, 30]\n",
-    "ndarry = np.array(my_list)"
+    "np.array(my_list)"
    ]
   },
   {
