Added some more content :)

--- a/11_snow_flake/02_ecommerce_dimension_modelling/01_part_01.md
+++ b/11_snow_flake/02_ecommerce_dimension_modelling/01_part_01.md
@@ -93,7 +93,7 @@ FROM @my_stage/order_products.csv
 FILE_FORMAT = (FORMAT_NAME = 'csv_file_format');
 ```
 ------------------------------------------------
-Let's create fact table.
+Let's create dimenson & fact table's.
 ```python
 CREATE OR REPLACE TABLE dim_users AS (
   SELECT
